--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "BSD-3-Clause"
 python = "^3.9"
 Django = "^3.2.4"
 pytest = "^6.2.4"
+pytest-django = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.13.0"
@@ -16,6 +17,10 @@ pre-commit = "^2.13.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings"
+addopts = "--reuse-db --migrations"
 
 [tool.isort]
 profile = "black"
